r-server/rethink-config/rethinkdb-2.4.1/build/external/v8_3.30.33.16-patched_install.log
+ pkg_depends_env
++ pkg_depends
++ true
+ pkg_install
+ pkg_copy_src_to_build
+ mkdir -p /home/r4ph3rd/Documents/rolline/r-server/rethinkdb-2.4.1/build/external/v8_3.30.33.16-patched/build
+ cp -af /home/r4ph3rd/Documents/rolline/r-server/rethinkdb-2.4.1/external/v8_3.30.33.16-patched/. /home/r4ph3rd/Documents/rolline/r-server/rethinkdb-2.4.1/build/external/v8_3.30.33.16-patched/build
+ mkdir -p /home/r4ph3rd/Documents/rolline/r-server/rethinkdb-2.4.1/build/external/v8_3.30.33.16-patched/lib
+ [[ /usr/bin/c++ = CLANG ]]
+ [[ /usr/bin/c++ = CLANG ]]
+ [[ Linux = Darwin ]]
+ arch_gypflags=
+ arm_gypflags='-Darm_version=6 -Darm_fpu=vfpv2'
++ /usr/bin/c++ -dumpmachine
+ host=x86_64-redhat-linux
+ case ${host%%-*} in
+ arch=x64
+ mode=release
+ [[ x64 = \s\3\9\0\x ]]
+ [[ 0 = 1 ]]
+ [[ x64 = \p\p\c\6\4 ]]
+ pkg_make x64.release CXX=/usr/bin/c++ LINK=/usr/bin/c++ LINK.target=/usr/bin/c++ 'GYPFLAGS=-Dwerror= ' V=1
+ in_dir /home/r4ph3rd/Documents/rolline/r-server/rethinkdb-2.4.1/build/external/v8_3.30.33.16-patched/build make x64.release CXX=/usr/bin/c++ LINK=/usr/bin/c++ LINK.target=/usr/bin/c++ 'GYPFLAGS=-Dwerror= ' V=1
+ local dir=/home/r4ph3rd/Documents/rolline/r-server/rethinkdb-2.4.1/build/external/v8_3.30.33.16-patched/build
+ shift
+ cd /home/r4ph3rd/Documents/rolline/r-server/rethinkdb-2.4.1/build/external/v8_3.30.33.16-patched/build
+ make x64.release CXX=/usr/bin/c++ LINK=/usr/bin/c++ LINK.target=/usr/bin/c++ 'GYPFLAGS=-Dwerror= ' V=1
make[2] : on entre dans le répertoire « /home/r4ph3rd/Documents/rolline/r-server/rethinkdb-2.4.1/build/external/v8_3.30.33.16-patched/build »
PYTHONPATH="/home/r4ph3rd/Documents/rolline/r-server/rethinkdb-2.4.1/build/external/v8_3.30.33.16-patched/build/tools/generate_shim_headers:/home/r4ph3rd/Documents/rolline/r-server/rethinkdb-2.4.1/build/external/v8_3.30.33.16-patched/build/build::/home/r4ph3rd/Documents/rolline/r-server/rethinkdb-2.4.1/build/external/v8_3.30.33.16-patched/build/build/gyp/pylib:" \
GYP_GENERATORS=make \
build/gyp/gyp --generator-output="out" build/all.gyp \
              -Ibuild/standalone.gypi --depth=. \
              -Dv8_target_arch=x64 \
               \
               \
              -S.x64.release -Dwerror= 
  File "build/gyp/gyp_main.py", line 12
    except ImportError, e:
                      ^
SyntaxError: invalid syntax
make[2]: *** [Makefile:419: out/Makefile.x64.release] Error 1
make[2] : on quitte le répertoire « /home/r4ph3rd/Documents/rolline/r-server/rethinkdb-2.4.1/build/external/v8_3.30.33.16-patched/build »
